--- a/alis.sample.opengl/Alis.Sample.OpenGL.csproj
+++ b/alis.sample.opengl/Alis.Sample.OpenGL.csproj
@@ -3,6 +3,14 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
+
+        <Optimize>true</Optimize>
+        <PublishSingleFile>true</PublishSingleFile>
+        <SelfContained>true</SelfContained>
+        <TrimUnusedDependencies>true</TrimUnusedDependencies>
+        <PublishTrimmed>true</PublishTrimmed>
+        <TrimMode>partial</TrimMode>
+        <TrimmerRemoveSymbols>true</TrimmerRemoveSymbols>
     </PropertyGroup>
 
     <ItemGroup>
@@ -19,28 +27,4 @@
         <PackageReference Include="Alis" Version="*" />
         <PackageReference Include="Alis.Extension.Graphic.OpenGL" Version="*" />
     </ItemGroup>
-
-    <PropertyGroup Condition="$(Configuration) == 'Debug'">
-        <Optimize>true</Optimize>
-        <PublishTrimmed>true</PublishTrimmed>
-        <TrimUnusedDependencies>true</TrimUnusedDependencies>
-    </PropertyGroup>
-    
-    
-    <PropertyGroup Condition="$(Configuration) == 'Release'">
-        <Optimize>true</Optimize>
-        <PublishReadyToRun>false</PublishReadyToRun>
-        <PublishSingleFile>true</PublishSingleFile>
-        <SelfContained>true</SelfContained>
-        <OptimizationPreference>Size</OptimizationPreference>
-        <StackTraceSupport>false</StackTraceSupport>
-        <InvariantGlobalization>true</InvariantGlobalization>
-        <IncludeNativeLibrariesForSelfExtract>false</IncludeNativeLibrariesForSelfExtract>
-        <DebugType>none</DebugType>
-        <EnableUnsafeBinaryFormatterSerialization>false</EnableUnsafeBinaryFormatterSerialization>
-        <TrimUnusedDependencies>true</TrimUnusedDependencies>
-        <PublishTrimmed>true</PublishTrimmed>
-        <TrimMode>Link</TrimMode>
-        <UseSystemResourceKeys>true</UseSystemResourceKeys>
-    </PropertyGroup>
 </Project>
