--- a/.github/workflows/[PRO][PUBLISH].yml
+++ b/.github/workflows/[PRO][PUBLISH].yml
@@ -6,22 +6,24 @@ on:
     paths-ignore:
       - '.git/**'
       - '.github/**'
-    
+
 env:
-  APP_NAME: "OpenGlSample"    
+  APP_NAME: "OpenGlSample"
 
 jobs:
   
   Build_And_Deploy:
-    runs-on: macos-latest
+    if: contains(github.event.head_commit.message, 'release:')
+    runs-on: macos-15-intel
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v5
         with:
           ref: master
+          fetch-depth: 1
 
       - name: Setup dotnet
-        uses: actions/setup-dotnet@v4
+        uses: actions/setup-dotnet@v5
         with:
           dotnet-version: |
             8.0.x
@@ -124,7 +126,7 @@ jobs:
 
       - name: zip linux-arm64
         run: zip -r ./.build/${{ env.APP_NAME }}_linux_arm64.zip ./.build/linux_arm64/
-    
+
       - name: git config user.name github-actions
         run: git config --global user.name "${{ secrets.USER_NAME }}"
 
@@ -149,8 +151,8 @@ jobs:
           git_config_global: true
           git_user_signingkey: true
           git_commit_gpgsign: true
-          
-      - name: git tag 
+
+      - name: git tag
         run: git tag -s "v${{ env.VERSIONFINAL }}" -m "v${{ env.VERSIONFINAL }}"
         env:
           GITHUB_TOKEN: ${{ secrets.OSLASH_BOT_GITHUB_TOKEN }}
@@ -177,7 +179,7 @@ jobs:
           writeToFile: true
           excludeTypes: chore, perf
 
-      - uses: softprops/action-gh-release@v2
+      - uses: softprops/action-gh-release@v1
         with:
           body: ${{ steps.changelog.outputs.changes }}
           token: "${{ secrets.GITHUB_TOKEN }}"
@@ -195,13 +197,14 @@ jobs:
             ./.build/${{ env.APP_NAME }}_win_x86.zip
             ./.build/${{ env.APP_NAME }}_linux_x64.zip
             ./.build/${{ env.APP_NAME }}_linux_arm64.zip
-            
+
+
       - name: git fetch
         run: git fetch
-        
+
       - name: git checkout master
         run: git checkout master
-      
+
       - name: git pull
         run: git pull
 
