--- a/alis.sample.opengl/Alis.Sample.OpenGL.csproj
+++ b/alis.sample.opengl/Alis.Sample.OpenGL.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>WinExe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
 
         <Optimize>true</Optimize>
